# MYMCPSERVER

./: .coverage  .cursorignore  .env.local  .gitignore  EXPANSION_GUIDE.md  INTEGRATION.md  MCP_SERVER_UPDATE_REPORT.md  MVP_GUIDE.md  README.md  logs_tester.py  modelcontextprotocol-python-sdk (1).txt  movedocs.ps1  movedocs_log.txt  package.json  pyproject.toml  requirements.txt  run_mcp_server.bat  run_server.py  test_config.py  test_logging.py
.cursor/: backupleavealone.json  mcp.json  npx-mcp.json
.cursor/rules/: 0000-global-knowledge-management.mdc  0010-Plan-ACT.mdc  0020-windows-powershell.mdc  0100-mcp-server-layout.mdc  0150-Read-module-docs.mdc  0200-project-locations.mdc  1000-python-environment.mdc  1001-python-imports.mdc  1002-python-style-guide.mdc  1002-python-type-hinting.mdc  1003-python-logging-no-print.mdc  1004-python-logging-no-direct-write.mdc  1005-python-logging-central-config.mdc  1100-python-style-guide.mdc  4000-docs-obsidian-organization.mdc  4100-obsidian-note-structure.mdc  4200-obsidian-linking.mdc  801-python-environment.mdc  9000-rule-crafting.mdc  9100-glob-pattern-system.mdc  powershell-error-handling.mdc
docs-obsidian/: Concepts MOC.md  Fleeting MOC.md  Home.md  MCP MOC.md  Processes MOC.md  Project MOC.md  Reference MOC.md  Tech MOC.md  _index.md
docs-obsidian/.obsidian/: app.json  community-plugins.json  graph.json  types.json  workspace.json
docs-obsidian/Excalidraw/: Drawing 2025-03-30 03.15.21.excalidraw.md
docs-obsidian/PLAN/: 03 - Adapter and Registry Layer.md  04 - Python Tool Server and SDK.md  06 - Integration, Testing, and Running.md
docs-obsidian/concepts/: Knowledge Graph.md  Linking Strategy.md  MOC Concept.md  cursor-mcp-integration.md  logging-centralization.md  mcp-architecture.md  mcp-central-hub.md  mcp-remote-servers.md
docs-obsidian/concepts/mcp/: MCP Central Hub.md  MCP Server Architecture.md  Tool Management.md
docs-obsidian/docsGuide/: Creating a New Note.md  Documentation Structure Guide.md  Knowledge Graph.md  Linking Strategy.md  MOC Concept.md  Metadata and Linking Guide.md  _index.md
docs-obsidian/docsGuide/templates/: Note Template.md  README.md  _index Template.md  _index.md
docs-obsidian/generalKnowledge/: README.md  _index.md
docs-obsidian/generalKnowledge/git/: Using SSH Keys with Multiple GitHub Repos.md  _index.md
docs-obsidian/generalKnowledge/makingRules/: _index.md  creatingRules.md
docs-obsidian/graph presets/: Concept.md  IMPLEMENTATION.md  MCP.md  NONE.md  PLAN.md  clean.md  content.md  domains.md  noindex-noguides.md  semantic.md  structure.md
docs-obsidian/languages/: _index.md
docs-obsidian/languages/python/: Python MOC.md  _index.md
docs-obsidian/languages/typescript/: _index.md
docs-obsidian/lists/: _index.md
docs-obsidian/mcpKnowledge/: README.md  _index.md
docs-obsidian/mcpKnowledge/core/: MCP Architecture.md  MCP Central Hub.md  MCP Server Architecture.md  Remote Servers.md  Server Architecture.md  Tool Management.md  _index.md
docs-obsidian/mcpKnowledge/development/: Configuration Examples.md  Hub Configuration.md  Hub Debugging.md  Hub Implementation Process.md  Hub Setup Guide.md  Implementation Guide.md  MCP Hub Implementation.md  Processes MOC.md  _index.md
docs-obsidian/mcpKnowledge/integration/: Cursor Integration.md  Cursor MCP Integration.md  Sequential Thinking Tools.md  _index.md
docs-obsidian/mcpKnowledge/pythonSDK/: _index.md  (+3 more)
docs-obsidian/processes/: Creating a New Note.md  custom-python-mcp-development.md  mcp-hub-implementation.md  mcp-hub-setup.md
docs-obsidian/projects/: _index.md
docs-obsidian/reference/: mcp-hub-configuration.md  mcp-hub-debugging.md  mcp-server-list.md  mcp-technical-implementation.md
docs-obsidian/tags/: _index.md
docs-obsidian/templates/: MOC Template.md  Note Template.md
docs-obsidian/userDump/: General Knowledge MOC.md  MCP Knowledge MOC.md  MCP MOC.md  MOC Template.md  Processes MOC.md  TypeScript MOC.md
ingest/: savagelysubtle-mymcpserver.txt
mcpPlanning/PLAN/: 05 - TypeScript Tool Server and SDK.md  Implementation Plan MOC.md
mcpPlanning/research/: obsidiantopython.md
plan/: MVP_EXECUTION_PLAN.md  mcp.json  newplan.md  sdkplan.md
rules-md-version/: 0000-global-knowledge-management.mdc  0010-Plan-ACT.mdc  0200-project-locations.mdc  1000-python-environment.mdc  4100-obsidian-note-structure.mdc
rules-md-version/md/: 0000-global-knowledge-management.md  0010-Plan-ACT.md  0020-windows-powershell.md  0100-mcp-server-layout.md  0150-Read-module-docs.md  0200-project-locations.md  1000-python-environment.md  1001-python-imports.md  1002-python-type-hinting.md  1003-python-logging-no-print.md  1004-python-logging-no-direct-write.md  1005-python-logging-central-config.md  1100-python-style-guide.md  4000-docs-obsidian-organization.md  4100-obsidian-note-structure.md  4200-obsidian-linking.md  9000-rule-crafting.md  9100-glob-pattern-system.md  parameter-handling.md  powershell-module-exports.md
scripts/: __init__.py  __main__.py  renamer_run.py
scripts/renamer/: __init__.py  rename.ps1  renamer.py
src/: config.py  run_server.py
src/chemist_server/: __main__.py  config.py  server.py
src/mcp/: config.py  server.py
src/mcp_core/: __init__.py  app.py  errors.py  health.py  registry.py  routes.py
src/mcp_proxy/: __init__.py  proxy_server.py  router.py
src/mymcpserver/: __init__.py  config.py  server.py
template/: mcp.json
tests/: conftest.py  pytest.ini  python_tool.py  test_cli_tool.py  test_core_transport_cli.py  test_logging.py  test_server.py  test_server_cli_integration.py
tests/fixtures/: mcp_fixtures.py
tests/integration/: test_app_initialization.py  test_app_startup.py  test_cli_execution.py  test_tool_execution.py  test_tool_invocation.py
tests/script-tests/: Test-Rename.ps1
tests/unit/: test_cli_tools.py  test_command_tools.py  test_git_tools.py  test_health.py  test_logger.py  test_registry.py  test_router.py  test_server_main.py  test_validation.py
theAICHEMISTCODEX/: aichemist_mcp_hub_new.py  github-installation.md  index.md  using-core-features.md
(+200 files in other folders)
